--- a/index.html
+++ b/index.html
@@ -40,14 +40,8 @@
               <span class="icon-bar"></span>
               
             </button>
-            <h1> <img src="assets/images/icons/logo.png" alt="logo" width="70px" height="60px">&nbsp&nbspHOPE FOUNDATION</h1>
+            <h1> <a class="logo" href="#about-us"><img src="assets/images/icons/logo.png" alt="logo" width="70px" height="60px"></a>&nbsp&nbspHOPE FOUNDATION</h1>
           </div>
-          <!-- <div class='nav-brand'> 
-            <a href='home.php'> 
-              <img src="images/icons/logo.png" alt='Official logo' width='100px' height='50px'> 
-            </a> 
-           </div>  -->
-          <!-- <a class="top-left" href=""> <img src="images/icons/logo.png" alt="logo"> </a> -->
           <div id="navbar" class="navbar-collapse collapse pull-right">
             <ul class="nav navbar-nav">
               <li><a href="#">HOME</a></li>
@@ -358,15 +352,16 @@
               <div class="footer-content">
                 <div class="footer-form">
                   <div class="footer-form">
-                    <form method="post" action="index.php" class="ajax-form">
+                    <div class="alert">Your message has been sent</div>
+                    <form class="ajax-form contact-form" id="contactForm">
                       <div class="form-group">
-                        <input type="text" name="name" class="form-control" placeholder="Name" required>
+                        <input type="text" id="name" name="name" class="form-control name" placeholder="Name" required>
                       </div>
                       <div class="form-group">
-                        <input type="email" name="email" class="form-control" placeholder="E-mail" required>
+                        <input type="email" id="email" name="email" class="form-control email" placeholder="E-mail" required>
                       </div>
                       <div class="form-group">
-                        <textarea name="message" class="form-control" placeholder="Message" required></textarea>
+                        <textarea name="message" id="message" class="form-control message" placeholder="Message" required></textarea>
                       </div>
                       <div class="form-group alerts">
                         <div class="alert alert-success" role="alert">
@@ -378,8 +373,8 @@
                         <button type="submit" class="btn btn-submit pull-right">Send message</button>
                       </div>
                     </form>
-                  </div>
-                  <div id="status">Success</div>
+                    <div class="infosResults"></div>
+                  </div> 
                 </div>
               </div>
             </div>
@@ -396,6 +391,11 @@
     </div>
   </footer>
 
+  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-database.js"></script>
+  <script src="main.js"></script>
+  <script src="assets/js/app.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/jquery-1.11.1.min.js"><\/script>')</script>
   <script src="assets/js/bootstrap.min.js"></script>
