--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
         <div class="container">
           <div class="carousel-caption">
           <h2 class="carousel-title bounceInDown animated slow">A small step change lots of lives</h2>
-            <!-- <h2 class="carousel-title bounceInDown animated slow">Be the small light of hope in someone’s life</h2> -->
             <h4 class="carousel-subtitle bounceInUp animated slow ">Be a helping hand !</h4>
             <a href="https://rzp.io/l/VwwIesBjY"
               class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow">DONATE NOW</a>
@@ -187,7 +186,7 @@
               <h5 class="reason-subtitle">Help abandoned elderly live with dignity</h5>
             </div>
             <div class="on-hover hidden-xs">
-              <p> Troubled by old age and living on his own, 80 year old Alok Mishra was struggling to get one square meal a day. </p>
+              <p> Troubled by old age and living on his own, 80 years old Alok Mishra was struggling to get one square meal a day. </p>
               <p>  His son and daughter-in-law live in the city and he was forced to fend for himself at this age.</p>
               <p> Today, he receives two wholesome meals a day from a community kitchen.</p>
               <p>"The food I get is very tasty and comes twice a day, he said."</p>
@@ -210,7 +209,6 @@
                 94% / 100%
               </div>
             </div>
-            <!-- <p class="progress-bar-title ">1526 monthly supporters</p> -->
             <h4 class="cause-title"><a href="#">NO CHILD HUNGRY</a></h4>
             <div class="cause-details">
               <p>We distributes monthly nutrition kits to ensure India’s poor children are not malnourished. The kits will contain immunity-boosting formulas, multi-vitamins, iron-rich food items, and food with high protein content including dates, Horlicks, etc.</p>
@@ -292,7 +290,6 @@
               <h4 class="footer-title"> About Us<span class="title-under"></span></h4>
               <div class="footer-content">
                 <p>
-                  <!-- <strong>Charity<img src="assets/images/icons/logo.png" height="30px" width="30px"> </strong>  -->
                   <p>We are India's most trusted and transparent crowdfunding platform, with a vision to create a social impact. 
                     <p>Our immediate focus is to simplify and facilitate the conception of Human Rights.</p></p>
                 </p>
@@ -311,16 +308,6 @@
                   <li class="tweet">
                     To help the underprivileged and marginalized to live a better tomorrow through various interventions
                   </li>
-                  <!-- <li class="tweet">
-                    This year we hope to raise £1m to support our Charity of the Year @NSPCC and the ChildLine Schools
-                    Service pic.twitter.com/L8KPKDIc1F
-                    — Santander UK (@santanderuk) January 20, 2014
-                  </li>
-                  <li class="tweet">
-                    I'm donating $100 per inch of snow tomorrow (airport measure) to @WheelerMission. Who will join me?
-                    Any $$ per inch would be great.
-                    — Peter Dunn (@PeteThePlanner) January 4, 2014
-                  </li> -->
                 </ul>
               </div>
             </div>
@@ -332,16 +319,6 @@
                     Hope Foundation strives to improve the quality of life of the financially disadvantaged and vulnerable sections 
                     of the society by promoting meaningful and needs based interventions on education, health and mitigation of poverty.
                   </li>
-                  <!-- <li class="tweet">
-                    This year we hope to raise £1m to support our Charity of the Year @NSPCC and the ChildLine Schools
-                    Service pic.twitter.com/L8KPKDIc1F
-                    — Santander UK (@santanderuk) January 20, 2014
-                  </li>
-                  <li class="tweet">
-                    I'm donating $100 per inch of snow tomorrow (airport measure) to @WheelerMission. Who will join me?
-                    Any $$ per inch would be great.
-                    — Peter Dunn (@PeteThePlanner) January 4, 2014
-                  </li> -->
                 </ul>
               </div>
             </div>
