--- a/index.html
+++ b/index.html
@@ -97,14 +97,22 @@
         </div>
       </div>
     </div>
-    <a class="left carousel-control" href="#homeCarousel" role="button" data-slide="prev">
-      <span class="fa fa-angle-left" aria-hidden="true"></span>
+    <!-- <a class="left carousel-control" href="#homeCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control" href="#homeCarousel" role="button" data-slide="next">
-      <span class="fa fa-angle-right" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
+    </a> -->
+    <!-- <a class="left carousel-control" href="#homeCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
     </a>
+    <a class="right carousel-control" href="#homeCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a> -->
   </div>
   <div class="section-home about-us fadeIn animated" id="about-us">
     <div class="container">
@@ -114,7 +122,7 @@
             <div class="col-icon-wrapper">
               <img src="assets/images/icons/affordable.png" alt="" height="70px">
             </div>
-            <h3 class="col-title">It's Affordable</h3>
+            <h3 class="col-title">It's  Affordable</h3>
             <div class="col-details">
               <p>No matter what you give, every donation will make an impact.</p>
             </div>
